--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.21",
     "element-plus": "^2.11.4",
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
-    "vue": "^3.5.22"
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "vue": "^3.5.22",
+    "vue3-leaflet": "^1.0.50"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
