实现文件上传与GeoJSON图层添加功能 - 在 PanelChat 组件中新增文件上传逻辑，支持上传 .zip - 通过 fetch API 调用 /api/upload 接口，解析返回的 GeoJSON 数据 - 使用 mapStore 管理并渲染上传的 GeoJSON 图层 - 添加上传状态提示（上传中、成功、失败） - 优化 PanelLayer 组件布局结构，提升滚动体验

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.21",
+    "axios": "^1.12.2",
     "element-plus": "^2.11.4",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
